# matrix-runner

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md  TestMatrix.toml  build.rs  used_keys.txt
.docker/amd64/: Dockerfile
.github/workflows/: rust-release.yml
benches/: execution_bench.rs
locales/: en.toml  zh-CN.toml
src/: cli.rs  core.rs  infra.rs  lib.rs  main.rs  reporting.rs  runner.rs
src/cli/: commands.rs
src/cli/commands/: init.rs  run.rs
src/commands/: init.rs  run.rs
src/core/: config.rs  execution.rs  models.rs  planner.rs
src/infra/: command.rs  fs.rs
src/reporting/: console.rs  html.rs
src/runner/: command.rs  config.rs  execution.rs  i18n.rs  init.rs  models.rs  planner.rs  reporting.rs  utils.rs
src/runner/assets/: report.css  report.js
tests/: cli_tests.rs  concurrency_tests.rs  integration_error_handling_tests.rs  integration_i18n_tests.rs  integration_parallel_tests.rs  unit_command_tests.rs  unit_config_tests.rs  unit_i18n_tests.rs  unit_models_tests.rs  unit_utils_tests.rs
tests/common/: mod.rs
tests/fixtures/: build_fail.toml  custom_command.toml  success.toml  test_fail.toml
tests/sample_project/: Cargo.toml  result.html
tests/sample_project/src/: lib.rs
