[package]
name = "matrix-runner"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
futures = "0.3.30"
num_cpus = "1.17.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
shlex = "1.3.0"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.10.1"
anyhow = "1.0.98"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"
