[package]
name = "matrix-runner"
version = "0.1.0"
edition = "2024"
description = "A powerful, configuration-driven test executor for Rust projects to run tests across a wide matrix of feature flags and environments."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GlorYouth/matrix-runner"
keywords = ["cli", "testing", "automation", "rust", "matrix"]
categories = ["command-line-utilities", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
futures = "0.3.30"
maud = "0.27.0"
num_cpus = "1.17.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
shlex = "1.3.0"
sys-locale = "0.3.2"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.10.1"
anyhow = "1.0.98"
loom = "0.7.2"
criterion = { version = "0.6.0", features = ["html_reports", "async_tokio"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"

[[bench]]
name = "execution_bench"
harness = false
